Edited index.html and main.css for semantic HTML. Product listings are now wrapped in <figure> tags and the text within is now wrapped in <figcaption> tags instead of <div> tags.

--- a/css/main.css
+++ b/css/main.css
@@ -225,6 +225,8 @@ span.listitem { /* Since both lists employ color attributes to change bullet/num
   -webkit-transition: box-shadow 0.5s ease-out;
   -moz-transition: box-shadow 0.5s ease-out;
   transition: box-shadow 0.5s ease-out;
+  margin:0;
+
 }
 
 .product-listing:hover, .product-listing:focus { /* Setting up box-shadow transitions on a hover/focus state */
