--- a/css/main.css
+++ b/css/main.css
@@ -43,25 +43,30 @@ section code { /* Styling for code blocks */
   display: block;
 }
 
-span.indent { /* for <span> tags in the <code> tag that need to display indented code */
+.indent, .indent-2, .indent-3, .indent-4, .indent-5 {
   display:inline-block;
-  text-indent:2em;
   margin:0;
   padding:0;
+}
+
+span.indent { /* for <span> tags in the <code> tag that need to display indented code */
+  text-indent:2em;
 }
 
 span.indent-2 { /* for <span> tags in the <code> tag that need to display indented code with 2 indents */
-  display:inline-block;
   text-indent:4em;
-  margin:0;
-  padding:0;
 }
 
 span.indent-3 { /* for <span> tags in the <code> tag that need to display indented code with 3 indents */
-  display:inline-block;
   text-indent:6em;
-  margin:0;
-  padding:0;
+}
+
+span.indent-4 { /* for <span> tags in the <code> tag that need to display indented code with 4 indents */
+  text-indent:8em;
+}
+
+span.indent-5 { /* for <span> tags in the <code> tag that need to display indented code with 4 indents */
+  text-indent:10em;
 }
 
 .colour-palette {
@@ -489,7 +494,7 @@ nav ul li {
 
 /*Shopping Cart Item*/
 
-.placeholder-img-cart-item {
+.placeholder-img-cart-item, .placeholder-img-product-view {
   width:100%;
   height:15em;
   background-color:#999;
@@ -509,16 +514,16 @@ nav ul li {
   margin-bottom:1em;
 }
 
-.cart-item dd {
+dd {
   margin:0;
 }
 
-.cart-item dt {
+dt {
   font-weight:bold;
   color:#0DB3BC;
 }
 
-.cart-item dd, .cart-item dt {
+dd, dt {
   font-size:1.25em;
 }
 
@@ -541,4 +546,32 @@ dl.container {
   dl.container {
     margin:0;
   }
+}
+
+/*Product View Item*/
+
+@media (min-width:35em) {
+  .placeholder-img-product-view {
+    width:30%;
+    height:25em;
+    float:left;
+    margin-right:2em;
+  }
+}
+
+.product-view p {
+  margin-bottom:1em;
+}
+
+.product-view .container {
+  justify-content:flex-start;
+}
+
+.product-view .container-item {
+  margin-left:0;
+}
+
+.product-view .product-price {
+  font-size:1.25em;
+  font-weight:bold;
 }
