--- a/css/main.css
+++ b/css/main.css
@@ -390,9 +390,17 @@ p.product-price { /* The paragraph that holds the product's price */
 /* Styling for the grid elements */
 
 .container { /* The major flexbox container element */
+  display: -webkit-flex;
+  display: -ms-flex;
   display: flex;
+  flex-direction: -webkit-row;
+  flex-direction: -ms-row;
   flex-direction: row;
+  justify-content: -webkit-space-around;
+  justify-content: -ms-space-around;
   justify-content: space-around;
+  flex-wrap: -webkit-wrap;
+  flex-wrap: -ms-wrap;
   flex-wrap:wrap;
 }
 
@@ -538,7 +546,11 @@ dd, dt {
 
 dl.container {
   margin:1em 0;
+  align-content:-webkit-center;
+  align-content:-ms-center;
   align-content:center;
+  align-items:-webkit-center;
+  align-items:-ms-center;
   align-items:center;
 }
 
@@ -564,6 +576,8 @@ dl.container {
 }
 
 .product-view .container {
+  justify-content:-webkit-flex-start;
+  justify-content:-ms-flex-start;
   justify-content:flex-start;
 }
 
@@ -574,4 +588,51 @@ dl.container {
 .product-view .product-price {
   font-size:1.25em;
   font-weight:bold;
+}
+
+.product-view {
+  display:inline-block;
+}
+
+/*2-Column Image Row*/
+
+.col-1of3, .col-2of3 {
+  flex-grow:1;
+  margin:1em 0;
+}
+
+.img-filler {
+  max-width:100%;
+  height:25em;
+  background-color:#999;
+}
+
+.more-below {
+  border-bottom: 0.1em solid #CCC;
+}
+
+@media (min-width:50em) {
+  .col-1of3 {
+    max-width:33%;
+  }
+
+  .col-2of3 {
+    max-width:66%;
+    flex-grow:2;
+  }
+
+  .col-1of3:first-of-type, .col-2of3:first-of-type {
+    margin-left:0;
+    margin-right:1em;
+  }
+
+  .col-1of3:last-of-type, .col-2of3:last-of-type {
+    margin-right:0;
+    margin-left:1em;
+  }
+
+  .more-below {
+    margin-bottom:2rem;
+    padding-bottom:2em;
+  }
 }
