--- a/css/main.css
+++ b/css/main.css
@@ -10,19 +10,19 @@
 body { /* Setting up the main body, and its padding from the inside contents*/
   font-family: 'Hind', Arial, Verdana, sans-serif;
   font-size:100%;
-  padding:14rem 2rem 2rem 2rem;
+  padding:14rem 2rem 2rem 2rem; /* Lots of top padding for the smallest view, in which the navbar comes down a lot */
   color:#777;
 }
 
 @media (min-width:30em) {
   body {
-    padding:10rem 2rem 2rem 2rem;
+    padding:10rem 2rem 2rem 2rem; /* Top padding gets reduced as the screen size increases */
   }
 }
 
 @media (min-width:56.25em) {
   body {
-    padding:6rem 2rem 2rem 2rem;
+    padding:6rem 2rem 2rem 2rem; /* Top padding gets reduced as the screen size increases */
   }
 }
 
@@ -43,7 +43,7 @@ section code { /* Styling for code blocks */
   display: block;
 }
 
-.indent, .indent-2, .indent-3, .indent-4, .indent-5 {
+.indent, .indent-2, .indent-3, .indent-4, .indent-5 { /*All indent <span> tags*/
   display:inline-block;
   margin:0;
   padding:0;
@@ -69,7 +69,7 @@ span.indent-5 { /* for <span> tags in the <code> tag that need to display indent
   text-indent:10em;
 }
 
-.colour-palette {
+.colour-palette { /* Colour palette <div> tags */
   width:20%;
   height:10rem;
   display:inline-block;
@@ -136,13 +136,7 @@ a:hover, a:focus {
   margin:0;
 }
 
-@media (max-width:30em) {
-  .navlink {
-    padding:0 auto;
-  }
-}
-
-@media (min-width:56.25em) {
+@media (min-width:56.25em) { /*Font size increases when screen size gets past 56.25em*/
   .navlink {
     font-size: 1em;
   }
@@ -152,7 +146,7 @@ a:hover, a:focus {
   color:#EFA867;
 }
 
-@media (max-width:34.999em) {
+@media (max-width:34.999em) { /* When the screen is small, have the buttons span the entire screen width and center the text */
   .submit, .reset, .edit, .delete {
     width:100%;
   }
@@ -202,23 +196,23 @@ a:hover, a:focus {
   font-size:1.25em;
 }
 
-.textfield {
+.textfield { /* For bordered form elements including textarea, text input, and <select> */
   border-style:solid;
   border-width:0.125rem;
   border-color:#999;
   padding-left:0.25rem;
-  width:100%;
+  width:100%; /* When screen size is small, have the fields span the width of the screen */
   margin-bottom:1em;
   display:block;
   font-size:1em;
 }
 
-textarea {
+textarea { /* Ensure that the textarea is big enough and that it doesn't somehow expand beyond the bounds of the screen */
   max-width:100%;
   min-height:10em;
 }
 
-@media (min-width:35em) {
+@media (min-width:35em) { /* When the screen gets larger, restrict the width of the fields */
   .textfield-label, .textfield {
     max-width:25em;
   }
@@ -232,18 +226,18 @@ textarea {
 
 h1 {
   color:#0DB3BC;
-  font-size:1.675rem;
+  font-size:2.25rem;
   font-family: 'Montserrat', Arial, Verdana, serif;
   margin:0;
 }
 
-@media (min-width:30em) {
+@media (min-width:30em) { /* Heading 1 size changes with screen size */
   h1 {
-    font-size: 2.215rem;
+    font-size: 2.5rem;
   }
 }
 
-@media (min-width:56.25em) {
+@media (min-width:56.25em) { /* Heading 1 size changes with screen size */
   h1 {
     font-size: 3rem;
   }
@@ -256,13 +250,13 @@ p.author { /* For the subheading (with author names) on each page */
   margin:0 0 1rem 0;
 }
 
-@media (min-width:30em) {
+@media (min-width:30em) { /* Subheading size changes with screen size */
   p.author {
     font-size: 1.25rem;
   }
 }
 
-@media (min-width:56.25em) {
+@media (min-width:56.25em) { /* Subheading size changes with screen size */
   p.author {
     font-size: 1.5rem;
   }
@@ -439,13 +433,13 @@ cite {
 
 /*Navigation Bar*/
 
-nav.fixed-nav-bar {
+nav.fixed-nav-bar { /* The top navigation bar */
   position:absolute;
   width: 100%;
   -webkit-box-shadow: 0 0.25rem 0.25rem 0 rgba(0,0,0,0.25);
   -moz-box-shadow: 0 0.25rem 0.25rem 0 rgba(0,0,0,0.25);
   box-shadow: 0 0.25rem 0.25rem 0 rgba(0,0,0,0.25);
-  top:0;
+  top:0; /* Keeps the navbar locked to the top of the screen */
   left:0;
   right:0;
   background-color:#FFF;
@@ -454,12 +448,12 @@ nav.fixed-nav-bar {
 
 @media (min-width:56.25em) {
   nav.fixed-nav-bar {
-    position:fixed;
+    position:fixed; /* When the screen is big enough, lock the navbar to the top of the window */
     height:4rem;
   }
 }
 
-.img-navbar {
+.img-navbar { /* When the screen is small, have the logo centered and above the navigation */
   display:block;
   margin:0 auto;
   padding:1em 0;
@@ -467,7 +461,7 @@ nav.fixed-nav-bar {
   width:auto;
 }
 
-@media (min-width:56.25em) {
+@media (min-width:56.25em) { /* With a larger screen, have the logo off to the left and float the navigation to the right */
   .img-navbar {
     max-height:100%;
     padding:1em 0 1em 2em;
@@ -476,13 +470,13 @@ nav.fixed-nav-bar {
   }
 }
 
-nav ul {
+nav ul { /* Align the navigation items to the center when the screen is small */
   width:100%;
   padding-right:2em;
   text-align:center;
 }
 
-@media (min-width:56.25em) {
+@media (min-width:56.25em) { /* Send the navigation to the right when the screen increases in size */
   nav ul {
     display:block;
     text-align:right;
@@ -491,24 +485,24 @@ nav ul {
 
 nav ul li {
   list-style-type:none;
-  display:inline-block;
+  display:inline-block; /* Navigation items are side-by-side with a larger screen size */
 }
 
 @media (max-width:29.999em) {
   nav ul li {
-    width:100%;
+    width:100%; /* With a smaller screen size, navigation items are stacked on top of each other */
   }
 }
 
 /*Shopping Cart Item*/
 
-.placeholder-img-cart-item, .placeholder-img-product-view {
+.placeholder-img-cart-item, .placeholder-img-product-view { /* Placeholder images */
   width:100%;
   height:15em;
   background-color:#999;
 }
 
-@media (min-width:35em) {
+@media (min-width:35em) { /* Cart item image appears much smaller and off to the left when the screen is larger */
   .placeholder-img-cart-item {
     width:10em;
     height:10em;
@@ -521,6 +515,8 @@ nav ul li {
   display:inline-block;
   margin-bottom:1em;
 }
+
+/* Description list that contains product info */
 
 dd {
   margin:0;
@@ -562,7 +558,7 @@ dl.container {
 
 /*Product View Item*/
 
-@media (min-width:35em) {
+@media (min-width:35em) { /* Product view item image appears smaller and off to the left when the screen is larger */
   .placeholder-img-product-view {
     width:30%;
     height:25em;
@@ -596,37 +592,36 @@ dl.container {
 
 /*2-Column Image Row*/
 
-.col-1of3, .col-2of3 {
+.col-1of3, .col-2of3 { /* By default (mobile-first) columns are stacked */
   flex-grow:1;
   margin:1em 0;
 }
 
-.img-filler {
+.img-filler { /* Filler image in the two-column setup */
   max-width:100%;
   height:25em;
   background-color:#999;
 }
 
-.more-below {
+.more-below { /* Class to be used if there's more content below */
   border-bottom: 0.1em solid #CCC;
 }
 
 @media (min-width:50em) {
   .col-1of3 {
-    max-width:33%;
+    max-width:50%; /* At a certain screen size, make the columns half-width */
   }
 
   .col-2of3 {
-    max-width:66%;
-    flex-grow:2;
+    max-width:50%;
   }
 
-  .col-1of3:first-of-type, .col-2of3:first-of-type {
+  .col-1of3:first-of-type, .col-2of3:first-of-type { /* Remove outside margins */
     margin-left:0;
     margin-right:1em;
   }
 
-  .col-1of3:last-of-type, .col-2of3:last-of-type {
+  .col-1of3:last-of-type, .col-2of3:last-of-type { /* Remove outside margins */
     margin-right:0;
     margin-left:1em;
   }
@@ -634,5 +629,16 @@ dl.container {
   .more-below {
     margin-bottom:2rem;
     padding-bottom:2em;
+  }
+}
+
+@media (min-width:70em) {
+  .col-1of3 {
+    max-width:33%; /* At a certain screen size, make this column 33% wide */
+  }
+
+  .col-2of3 {
+    max-width:66%; /* At a certain screen size, make this column 66% wide */
+    flex-grow:2;
   }
 }
