--- a/css/main.css
+++ b/css/main.css
@@ -353,6 +353,28 @@ p.product-price { /* The paragraph that holds the product's price */
   transition: color 0.3s ease-out;
 }
 
+p.product-date { /* The paragraph that holds the product's price */
+  color:#515151;
+  font-size:0.9rem;
+  font-family: 'Montserrat', Arial, Verdana, serif;
+  font-weight: bold;
+  margin:0;
+  -webkit-transition: color 0.3s ease-out;
+  -moz-transition: color 0.3s ease-out;
+  transition: color 0.3s ease-out;
+}
+
+p.product-sold { /* The paragraph that holds the product's price */
+  color:#515151;
+  font-size:0.9rem;
+  font-family: 'Montserrat', Arial, Verdana, serif;
+  font-weight: bold;
+  margin:0;
+  -webkit-transition: color 0.3s ease-out;
+  -moz-transition: color 0.3s ease-out;
+  transition: color 0.3s ease-out;
+}
+
 .product-info { /* The smaller DIV within .product-listing that holds the product's name and price*/
   padding:1rem;
   border-top-style:solid;
@@ -435,6 +457,16 @@ nav.fixed-nav-bar { /* The top navigation bar */
   top:0; /* Keeps the navbar locked to the top of the screen */
   left:0;
   right:0;
+  background-color:#FFF;
+  margin-bottom:2rem;
+}
+
+nav.filter-nav-bar { /* The filter navigation bar */
+  text-align: right;
+  width: 100%;
+  -webkit-box-shadow: 0 0.25rem 0.25rem 0 rgba(0,0,0,0.25);
+  -moz-box-shadow: 0 0.25rem 0.25rem 0 rgba(0,0,0,0.25);
+  box-shadow: 0 0.25rem 0.25rem 0 rgba(0,0,0,0.25);
   background-color:#FFF;
   margin-bottom:2rem;
 }
