Filled out the checkout forms, added price subtotals, added the review and confirmation steps

--- a/css/main.css
+++ b/css/main.css
@@ -686,3 +686,16 @@ dl.container {
     padding-bottom: 0;
   }
 }
+
+/* For the steps not selected in the checkout process */
+.step-not-selected {
+  opacity:0.3;
+}
+
+.subtotal {
+  font-size:1.25rem;
+}
+
+.total {
+  color:#0DB3BC;
+}
