--- a/css/main.css
+++ b/css/main.css
@@ -10,25 +10,25 @@
 body { /* Setting up the main body, and its padding from the inside contents*/
   font-family: 'Hind', Arial, Verdana, sans-serif;
   font-size:100%;
-  padding:20rem 2rem 2rem 2rem; /* Lots of top padding for the smallest view, in which the navbar comes down a lot */
+  padding:20em 2em 2em 2em; /* Lots of top padding for the smallest view, in which the navbar comes down a lot */
   color:#777;
   background-color:#FFF;
 }
 
 @media (min-width:42.51em) {
   body {
-    padding:12rem 2rem 2rem 2rem; /* Top padding gets reduced as the screen size increases */
+    padding:12em 2em 2em 2em; /* Top padding gets reduced as the screen size increases */
   }
 }
 
 @media (min-width:56.25em) {
   body {
-    padding:8rem 2rem 2rem 2rem; /* Top padding gets reduced as the screen size increases */
+    padding:8em 2em 2em 2em; /* Top padding gets reduced as the screen size increases */
   }
 }
 
 div.wrapper { /* The DIV wrapper for the entire page */
-  max-width:80rem;
+  max-width:80em;
   margin:0 auto;
 }
 
@@ -72,7 +72,7 @@ span.indent-5 { /* for <span> tags in the <code> tag that need to display indent
 
 [class*='colour-'] { /* Colour palette <div> tags */
   width:20%;
-  height:10rem;
+  height:10em;
   display:inline-block;
 }
 
@@ -159,16 +159,16 @@ a:hover, a:focus {
   color:#EFA867;
   border-style:solid;
   border-color:#EFA867;
-  border-width:0.15rem;
-  font-size: 1.25rem; 
+  border-width:0.15em;
+  font-size: 1.25em; 
   padding: 0.3em;
 }
 
 .reset, .delete { /* Reset button for forms */
   border-style:solid;
   border-color:#999;
-  border-width:0.15rem;
-  font-size: 1.25rem;
+  border-width:0.15em;
+  font-size: 1.25em;
   padding: 0.3em;
 }
 
@@ -193,9 +193,9 @@ a:hover, a:focus {
 
 .textfield { /* For bordered form elements including textarea, text input, and <select> */
   border-style:solid;
-  border-width:0.125rem;
+  border-width:0.125em;
   border-color:#999;
-  padding-left:0.25rem;
+  padding-left:0.25em;
   width:100%; /* When screen size is small, have the fields span the width of the screen */
   margin-bottom:1em;
   display:block;
@@ -318,9 +318,9 @@ span.listitem { /* Since both lists employ color attributes to change bullet/num
 
 .product-listing { /* The big DIV that holds all of the product info together */
   display:inline-block;
-  -webkit-box-shadow: 0 0 1rem 0 rgba(0,0,0,0.25);
-  -moz-box-shadow: 0 0 1rem 0 rgba(0,0,0,0.25);
-  box-shadow: 0 0 1rem 0 rgba(0,0,0,0.25);
+  -webkit-box-shadow: 0 0 1em 0 rgba(0,0,0,0.25);
+  -moz-box-shadow: 0 0 1em 0 rgba(0,0,0,0.25);
+  box-shadow: 0 0 1em 0 rgba(0,0,0,0.25);
   -webkit-transition: box-shadow 0.5s ease-out;
   -moz-transition: box-shadow 0.5s ease-out;
   transition: box-shadow 0.5s ease-out;
@@ -329,9 +329,9 @@ span.listitem { /* Since both lists employ color attributes to change bullet/num
 }
 
 .product-listing:hover, .product-listing:focus { /* Setting up box-shadow transitions on a hover/focus state */
-  -webkit-box-shadow: 0 0 1rem 0 rgba(0,0,0,0.75);
-  -moz-box-shadow: 0 0 1rem 0 rgba(0,0,0,0.75);
-  box-shadow: 0 0 1rem 0 rgba(0,0,0,0.75);
+  -webkit-box-shadow: 0 0 1em 0 rgba(0,0,0,0.75);
+  -moz-box-shadow: 0 0 1em 0 rgba(0,0,0,0.75);
+  box-shadow: 0 0 1em 0 rgba(0,0,0,0.75);
 }
 
 p.product-name { /* The paragraph that holds the product's name */
@@ -357,11 +357,11 @@ p.product-price, p.product-date, p.product-sold { /* The paragraph that holds th
 }
 
 .product-info { /* The smaller DIV within .product-listing that holds the product's name and price*/
-  padding:1rem;
+  padding:1em;
   text-align:center;
   border-top-style:solid;
   border-color: #CCC;
-  border-top-width: 0.1rem;
+  border-top-width: 0.1em;
   -webkit-transition: border-color, background-color 0.3s ease-out;
   -moz-transition: border-color, background-color 0.3s ease-out;
   transition: border-color, background-color 0.3s ease-out;
@@ -370,7 +370,7 @@ p.product-price, p.product-date, p.product-sold { /* The paragraph that holds th
 .product-listing:hover .product-info, .product-listing:focus .product-info { /* Setting the info box to change color on hover/focus */
   border-top-style:solid;
   border-top-color: #EFA867;
-  border-top-width: 0.1rem;
+  border-top-width: 0.1em;
   background-color: #EFA867;
 }
 
@@ -398,7 +398,7 @@ p.product-price, p.product-date, p.product-sold { /* The paragraph that holds th
 
 .more-below, .more-below-small { /* Class to be used if there's more content below (more-below-small only shows up when the screen is very small) */
   border-bottom: 0.1em solid #CCC;
-  margin-bottom:2rem;
+  margin-bottom:2em;
   padding-bottom:2em;
 }
 
@@ -466,21 +466,21 @@ cite {
 nav.fixed-nav-bar { /* The top navigation bar */
   position:absolute;
   width: 100%;
-  -webkit-box-shadow: 0 0.25rem 0.25rem 0 rgba(0,0,0,0.25);
-  -moz-box-shadow: 0 0.25rem 0.25rem 0 rgba(0,0,0,0.25);
-  box-shadow: 0 0.25rem 0.25rem 0 rgba(0,0,0,0.25);
+  -webkit-box-shadow: 0 0.25em 0.25em 0 rgba(0,0,0,0.25);
+  -moz-box-shadow: 0 0.25em 0.25em 0 rgba(0,0,0,0.25);
+  box-shadow: 0 0.25em 0.25em 0 rgba(0,0,0,0.25);
   top:0; /* Keeps the navbar locked to the top of the screen */
   left:0;
   right:0;
   background-color:#FFF;
-  margin-bottom:2rem;
+  margin-bottom:2em;
   z-index:1;
 }
 
 @media (min-width:56.25em) {
   nav.fixed-nav-bar {
     position:fixed; /* When the screen is big enough, lock the navbar to the top of the window */
-    height:4rem;
+    height:4em;
   }
 }
 
@@ -559,7 +559,7 @@ nav ul li {
 }
 
 .container-item { /* Individual items within the flexbox container */
-  margin:1rem;
+  margin:1em;
 }
 
 /*Shopping Cart Item*/
@@ -605,7 +605,7 @@ dd, dt {
 }
 
 .cart-item div.container-item {
-  margin:0 1rem 1rem 1rem;
+  margin:0 1em 1em 1em;
 }
 
 dl.container {
@@ -686,7 +686,7 @@ dl.container {
 
 /* Consistent footer across pages */
 footer {
-  margin-top:8rem;
+  margin-top:8em;
 }
 
 .footer-image {
@@ -711,4 +711,14 @@ footer p {
 
 .title-team {
   margin-bottom:0;
+}
+
+/* Reviews */
+
+article h3 {
+  margin-bottom:0;
+}
+
+.review-purchase-date, .review-rating {
+  font-weight:bold;
 }
