--- a/css/main.css
+++ b/css/main.css
@@ -672,6 +672,8 @@ dl.container {
 /* Subtotal and total price classes for paragraph tags */
 .subtotal {
   font-size:1.25rem;
+  text-align: right;
+  padding-right: 1rem;
 }
 
 .total {
