change the css for subtotal only on the checkout page font-size:1.25rem; text-align: right; padding-right: 1rem;

--- a/css/main.css
+++ b/css/main.css
@@ -672,6 +672,10 @@ dl.container {
 /* Subtotal and total price classes for paragraph tags */
 .subtotal {
   font-size:1.25rem;
+}
+
+.subtotal-checkout {
+  font-size:1.25rem;
   text-align: right;
   padding-right: 1rem;
 }
